--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,7 +5,7 @@
 </div><!-- /.row -->
 
 
-<footer id="footer-content" class="bg-grau">
+<footer id="footer-content" class="bg-primary">
   <div id="footer">
     <div class="row">
       <div class="medium-6 large-6 columns">
@@ -16,17 +16,14 @@
         </p>
         <section id="subfooter-left" class="small-12 medium-6 columns">
           <ul class="inline-list social-icons">
-          {% for social_item in site.data.socialmedia %}
+            {% for social_item in site.data.socialmedia %}
             <li><a href="{{ social_item.url }}" target="_blank" class="{{ social_item.class }}" title="{{ social_item.title }}"></a></li>
-          {% endfor %}
+            {% break %}
+          {% endfor %}          
           </ul>
         </section>
       </div>
       <!-- /.large-6.columns -->
-      <div class="medium-6 large-6 columns">
-        <a href="http://genome.wustl.edu/"><img src="/assets/img/funding/mgi_logo_shadow.png"></a>
-      </div><!-- /.large-6.columns -->
-    </div><!-- /.row -->
     <div class="row">
         <section id="subfooter-right" class="medium-6 large-centered columns">
           {{ site.credits }}
