--- a/_sass/_10_asciidoc.scss
+++ b/_sass/_10_asciidoc.scss
@@ -1036,9 +1036,9 @@ div.unbreakable { page-break-inside: avoid; }
 
 .gray-background { background-color: #7d7d7d; }
 
-.green { color: #006000; }
+.green { color: #3d4366; }
 
-.green-background { background-color: #007d00; }
+.green-background { background-color: #4268b9; }
 
 .lime { color: #00bf00; }
 
