--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,12 +26,12 @@ $body-bg: 			#ffffff;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1: #2c6546;		// dark turquoise
-$ci-2: #669f74;		// green
+$ci-1: #293492;		// dark turquoise
+$ci-2: #2143d8;		// green
 $ci-3: #EFC94C;		// yellow
 $ci-4: #E27A3F;		// orange
 $ci-5: #DF4949;		// red
-$ci-6: #ACE1AF;     // green
+$ci-6: #3084e4;     // green
 
 
 
