--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -27,7 +27,7 @@ $body-bg: 			#ffffff;
 ------------------------------------------------------------------- */
 
 $ci-1: #293492;		// dark turquoise
-$ci-2: #2143d8;		// green
+$ci-2: #4054ac;		// green
 $ci-3: #EFC94C;		// yellow
 $ci-4: #E27A3F;		// orange
 $ci-5: #DF4949;		// red
